# retgui

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt  premake5.lua  retgui.sln
ExampleApp/: premake5.lua
ExampleApp/src/: main.cpp
RetGui/: premake5.lua
RetGui/include/: retgui.hpp  retgui_internal.hpp
RetGui/src/: retgui.cpp  retgui_internal.cpp
backends/vulkan/: generate_spv.bat  vk_shader.frag  vk_shader.vert
examples/: CMakeLists.txt  main.cpp
examples/example_glfw_opengl3/: CMakeLists.txt  main.cpp
examples/fonts/: License_Karla.txt
examples/libs/glad/: CMakeLists.txt
examples/libs/glad/include/glad/: gl.h
examples/libs/glad/src/: gl.c
include/retgui/: elements.hpp  fonts.hpp  internal.hpp  io.hpp  retgui.hpp  types.hpp
include/ruic/: elements.hpp  internal.hpp  ruic.hpp  types.hpp  widgets.hpp
retgui/: CMakeLists.txt  retgui.vcxproj.filters
retgui/include/retgui/: retgui.hpp
retgui/src/retgui/: retgui.cpp
scripts/: setup_vs2022.bat
src/: elements.cpp  fonts.cpp  io.cpp  retgui.cpp  ruic.cpp  stb_image_write.h  stb_rect_pack.h  stb_truetype.h  types.cpp  widgets.cpp
testbed/: CMakeLists.txt  testbed.cpp
